<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/rgDownloadOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/glide_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glide_option"/>

        <RadioButton
            android:id="@+id/glide_option_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glide_option_error"/>

        <RadioButton
            android:id="@+id/udacity_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/udacity_option"/>

        <RadioButton
            android:id="@+id/retrofit_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_option"/>

    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:ld_title_size="18sp"
        app:ld_title_loading="@string/button_loading"
        app:ld_title_normal="@string/button_normal"
        app:ld_title_color="@color/white"
        app:ld_background_normal="@color/colorPrimary"
        app:ld_background_loading="@color/colorPrimaryDark"
        app:ld_highlight_color="@color/colorAccent"/>

</androidx.constraintlayout.widget.ConstraintLayout>